removed unessasary code & comments

--- a/hide-on-scroll-down-with-darkmode/index.html
+++ b/hide-on-scroll-down-with-darkmode/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="main.css" />
 		<script src="./script.js" defer></script>
-		<title>Document</title>
+		<title>Hide Navbar on Scroll Down</title>
 	</head>
 	<body>
 		<nav>
@@ -90,6 +90,5 @@
 				</svg>
 			</div>
 		</div>
-		<footer></footer>
 	</body>
 </html>
