nav html structure

--- a/bottom-menu/index.html
+++ b/bottom-menu/index.html
@@ -1,14 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="./script.js" defer></script>
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
+		<script src="./script.js" defer></script>
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="main">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quaerat harum sunt ullam similique voluptas saepe deleniti tenetur eaque veniam quidem nobis rerum nostrum totam eum illo cum dolores voluptatem omnis possimus eligendi, earum est adipisci cumque! Perferendis ratione illum esse consequuntur nam iste. Nesciunt at, velit soluta eligendi nostrum nobis harum. Ipsa facilis ad quidem suscipit at corrupti quas quae aut incidunt dicta fuga placeat, temporibus sit id distinctio quos nemo libero asperiores consequuntur quibusdam, rem eaque! Corrupti repudiandae, voluptatibus architecto esse dolorum quo earum, consequuntur nulla cumque animi laborum quis sunt vitae, officiis aspernatur odio libero magni culpa nemo sed neque! At aperiam beatae asperiores placeat impedit soluta ex, quasi error pariatur eius ratione alias consectetur rerum obcaecati fugiat doloremque. Id eos voluptatem dolore distinctio ut quas quasi nemo, omnis numquam sed iste! Nesciunt placeat eaque pariatur accusamus sunt eos, dolorem ab perferendis ducimus nihil, tempora beatae id harum saepe quis sit odio quasi similique. Vitae laudantium blanditiis ipsam quibusdam explicabo aliquam est itaque reprehenderit odit debitis, necessitatibus inventore at, aut, voluptatem possimus consectetur dolores eos accusantium sunt. Dignissimos quos accusamus qui dolor alias, vel veritatis, delectus veniam, repellat quidem dicta enim ullam excepturi! Dolor, quae repellendus fugit odio repudiandae similique accusantium tempora corporis. Aliquam rerum odit molestias, enim corporis sapiente voluptas aut fuga sint, voluptatibus ad harum eveniet distinctio impedit placeat tempora suscipit, ab autem saepe deleniti. Porro amet nam mollitia eius ducimus eos delectus possimus nobis doloribus exercitationem quia neque eveniet soluta, unde totam quasi quam fugiat in inventore deserunt accusamus laboriosam perspiciatis asperiores voluptates. Dolorum hic obcaecati, ipsam quisquam aut totam velit rem quia tempore doloremque dicta, asperiores consectetur! Adipisci, sunt? Dignissimos dolore dolorem ex eius aspernatur provident aliquid obcaecati iste quas corporis quam, animi neque ratione, cumque deserunt, assumenda magni ab reiciendis! Ipsa, recusandae aliquid! Nobis laborum itaque numquam enim natus eligendi atque maxime dicta ad facere et fugit, explicabo adipisci dolore voluptas? Accusamus, eius. Culpa, labore. Sint dignissimos minima sit omnis ad asperiores quis iure unde fugiat quia praesentium maiores labore, voluptas nemo modi? Placeat nesciunt natus facere beatae ratione error dicta! Sed nemo laudantium nostrum facere fugit quidem eos corrupti, debitis optio! Ipsam ullam quaerat ut nesciunt dicta alias voluptatum dolore repellendus, velit nisi est quisquam quis. Accusamus rem molestias tenetur sed officiis, obcaecati quas temporibus labore autem voluptatum ullam eius illum nulla iste necessitatibus natus, exercitationem voluptates officia repudiandae a? Dolore architecto reiciendis ut! Iste harum tempore quo beatae. Nisi rerum, delectus, sit eligendi optio fuga eius minima qui, dolore ad facilis in? Cupiditate, quibusdam repudiandae. Asperiores, id. Dolorem omnis animi perferendis blanditiis consequuntur iusto adipisci commodi beatae dignissimos eos, nobis suscipit! Unde quam quia expedita, minima totam numquam harum necessitatibus tempore eveniet molestiae nisi ipsum illo praesentium laboriosam molestias aspernatur placeat culpa distinctio. Quod nesciunt sint dolorum non illum deserunt a. Doloribus aut dolores deserunt aperiam nobis enim odio, ipsam ullam debitis hic obcaecati sunt totam ad! Sint culpa eius quia provident, repellat rerum atque architecto debitis sequi. Pariatur, totam at. Amet facere pariatur voluptates magnam alias, atque, doloremque at commodi odit cum incidunt. Velit suscipit, ipsam ratione cumque, corporis fuga saepe incidunt voluptatibus praesentium nostrum qui, cupiditate explicabo. Deserunt modi sequi similique id distinctio porro veniam omnis beatae, voluptatibus libero ex, sunt commodi molestiae assumenda ipsa quaerat illo accusantium! Et quasi temporibus at, dolor inventore molestiae assumenda esse vero! Eius sit eum pariatur labore amet recusandae! Exercitationem sed molestias maxime tempore consequuntur tenetur totam a? Cumque nam a animi corporis mollitia illum culpa voluptas omnis nostrum est, accusamus enim minima nulla quos quis unde nihil quibusdam. Quam in blanditiis molestias aut, qui labore! Optio error ipsam pariatur perferendis natus accusamus nulla adipisci rerum ducimus, nostrum voluptates? A temporibus earum ullam incidunt quas, ducimus soluta. Ullam quos, blanditiis fuga amet corporis esse accusamus, cumque rerum repellat assumenda iusto inventore ipsam repudiandae quod expedita fugit culpa velit molestiae maiores! Fugiat eos rem quasi dolore et magni deleniti doloremque veritatis itaque magnam, nisi eaque vitae. Nisi ullam, ratione id cum placeat maiores rerum quo. Magni sit eligendi nisi error beatae voluptates alias suscipit ullam tempore consequatur asperiores quasi eveniet eum deserunt ducimus explicabo tenetur, iusto quia facere quidem in, nihil recusandae molestias! Dolorem architecto quae dolores mollitia libero iste soluta blanditiis vitae commodi ad harum id, eum, incidunt molestiae facilis impedit veritatis vero in ut sapiente inventore ullam possimus! Repellat dolor, enim nam, ex iure veritatis molestias culpa, nisi commodi alias doloremque quo accusantium quibusdam? Nam aperiam vitae temporibus quos cumque eveniet officia modi, at nulla obcaecati aspernatur, reprehenderit earum est illo placeat repellendus deleniti ex aliquid magni pariatur eum possimus? Quisquam dignissimos repellat iure cum nesciunt inventore dolores obcaecati, reprehenderit nobis. Laudantium perferendis odio nesciunt dolorem possimus sed animi sint quod temporibus, accusamus autem iste vitae error debitis eum iusto harum sequi consectetur corporis cumque ratione? Perferendis voluptate distinctio iste aspernatur. Molestiae voluptatibus repellendus dolor in? Doloribus voluptate excepturi qui delectus, perspiciatis, nulla nemo voluptatibus explicabo aliquid aspernatur molestiae reprehenderit voluptas animi atque nam necessitatibus quibusdam vitae numquam corporis, nihil porro minima? Reprehenderit architecto dolore repellat nulla error. Amet consectetur dolorem nulla sequi. Sapiente tenetur rem porro quod iste architecto ab cum nostrum, deleniti beatae. Distinctio, quibusdam! Reprehenderit, magnam ipsa expedita impedit possimus enim tenetur voluptatum laudantium, maiores, veniam nam! Laboriosam facilis molestias id provident, sit deleniti omnis dolores, soluta totam dolorum culpa doloremque non? Dolores dignissimos provident ex, quaerat eius exercitationem ad soluta id praesentium cumque iusto beatae tenetur eaque, consequatur ipsum ullam. Necessitatibus eum ab dolor maiores consectetur facere libero perferendis error ratione. Odit molestias dolores inventore illo, a quasi qui, ipsum labore ipsa reiciendis deserunt maxime excepturi unde quos officia? Sint nisi nesciunt magni voluptate iure nostrum dolore? Nam, eligendi cupiditate? Eveniet fugit officiis, recusandae fugiat eum magnam maxime. Veritatis eos nemo obcaecati, odit possimus ut expedita, magni temporibus consectetur enim doloremque suscipit adipisci nulla et fugit sed laudantium reiciendis. Ipsam rem ab, molestias temporibus inventore deserunt nam ratione voluptatibus minus quod, neque quos doloribus, eos libero magni.
+		</div>
+		<div class="nav">
+			<ul>
+				<li>
+					<a href="">Home</a>
+				</li>
+				<li>
+					<a class="open-menu" data-menu-num="0" href="#menu-2">First Menu</a>
+				</li>
+				<li>
+					<a class="open-menu" data-menu-num="1" href="#menu-1">Second Menu</a>
+				</li>
+				<li>
+					<a class="open-menu" data-menu-num="2" href="#menu-2">Third Menu</a>
+				</li>
+				<li>
+					<a class="open-menu" data-menu-num="3" href="#menu-3">Fourth Menu</a>
+				</li>
+				<li>
+					<a href="">Info</a>
+				</li>
+				<li>
+					<a href="">Contact</a>
+				</li>
+			</ul>
+			<div class="menu">
+				<ul>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+					<li><a href="#">Lorem ipsum consectetur.</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					
+				</ul>
+			</div>
+		</div>
+	</body>
 </html>
