header and nav styling

--- a/bottom-menu/index.html
+++ b/bottom-menu/index.html
@@ -9,88 +9,94 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="nav">
-			<ul>
-				<li>
-					<a href="">Home</a>
-				</li>
-				<li>
-					<a class="open-menu" data-menu-num="0" href="#menu-2">First Menu</a>
-				</li>
-				<li>
-					<a class="open-menu" data-menu-num="1" href="#menu-1">Second Menu</a>
-				</li>
-				<li>
-					<a class="open-menu" data-menu-num="2" href="#menu-2">Third Menu</a>
-				</li>
-				<li>
-					<a class="open-menu" data-menu-num="3" href="#menu-3">Fourth Menu</a>
-				</li>
-				<li>
-					<a href="">Info</a>
-				</li>
-				<li>
-					<a href="">Contact</a>
-				</li>
-			</ul>
-			<div class="menu">
+		<header>
+			<div class="home-btn">
+				<a href="">Home</a>
+			</div>
+			<nav class="nav">
 				<ul>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					<li>
+						<a class="open-menu" data-menu-num="0" href="#menu-2">First Menu</a>
+					</li>
+					<li>
+						<a class="open-menu" data-menu-num="1" href="#menu-1">Second Menu</a>
+					</li>
+					<li>
+						<a class="open-menu" data-menu-num="2" href="#menu-2">Third Menu</a>
+					</li>
+					<li>
+						<a class="open-menu" data-menu-num="3" href="#menu-3">Fourth Menu</a>
+					</li>
 				</ul>
+				<div class="menu">
+					<ul>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					</ul>
+					<ul>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+						<li><a href="#">Lorem ipsum consectetur.</a></li>
+					</ul>
+					<ul>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+					</ul>
+					<ul>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					</ul>
+				</div>
+			</nav>
+			<div class="other-links">
 				<ul>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-					<li><a href="#">Lorem ipsum consectetur.</a></li>
-				</ul>
-				<ul>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-				</ul>
-				<ul>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+					<li>
+						<a href="">Info</a>
+					</li>
+					<li>
+						<a href="">Contact</a>
+					</li>
 				</ul>
 			</div>
-		</div>
+		</header>
 
 		<div class="main">
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quaerat harum sunt ullam similique voluptas saepe deleniti tenetur eaque veniam quidem nobis rerum nostrum totam eum illo cum
