--- a/bottom-menu/index.html
+++ b/bottom-menu/index.html
@@ -29,61 +29,64 @@
 					</li>
 				</ul>
 				<div class="menu">
-					<ul>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					</ul>
-					<ul>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-						<li><a href="#">Lorem ipsum consectetur.</a></li>
-					</ul>
-					<ul>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-						<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-					</ul>
-					<ul>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-						<li><a href="#">Amet consectetur adipisicing elit..</a></li>
-					</ul>
+					<div class="close-btn">Close</div>
+					<div class="lists">
+						<ul>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						</ul>
+						<ul>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+							<li><a href="#">Lorem ipsum consectetur.</a></li>
+						</ul>
+						<ul>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+						</ul>
+						<ul>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+							<li><a href="#">Amet consectetur adipisicing elit..</a></li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 			<div class="other-links">
