--- a/bottom-menu/index.html
+++ b/bottom-menu/index.html
@@ -5,13 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 		<script src="./script.js" defer></script>
 		<title>Document</title>
 	</head>
 	<body>
 		<header>
 			<div class="home-btn">
-				<a href="">Home</a>
+				<a href="#">Home</a>
 			</div>
 			<nav class="nav">
 				<ul>
@@ -90,12 +91,15 @@
 				</div>
 			</nav>
 			<div class="other-links">
+				<button class="dark-mode-toggle">
+					<span class="material-symbols-outlined"> dark_mode </span>
+				</button>
 				<ul>
 					<li>
-						<a href="">Info</a>
+						<a href="#">Info</a>
 					</li>
 					<li>
-						<a href="">Contact</a>
+						<a href="#">Contact</a>
 					</li>
 				</ul>
 			</div>
