close button icon & padding

--- a/bottom-menu/index.html
+++ b/bottom-menu/index.html
@@ -30,7 +30,7 @@
 					</li>
 				</ul>
 				<div class="menu">
-					<div class="close-btn">Close</div>
+					<div class="close-btn"><span class="material-symbols-outlined"> close </span></div>
 					<div class="lists">
 						<ul>
 							<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
