created & styled navbar

--- a/multiple-dropdown-menus/index.html
+++ b/multiple-dropdown-menus/index.html
@@ -10,6 +10,39 @@
     <title>MultiPle Dropdown menus</title>
 </head>
 <body>
-    
+    <header>
+  <div class="home-btn">
+    <a href="#">Home</a>
+  </div>
+  <nav class="nav">
+    <ul>
+      <li>
+        <a class="open-menu" href="#menu-2">First Menu</a>
+      </li>
+      <li>
+        <a class="open-menu" href="#menu-1">Second Menu</a>
+      </li>
+      <li>
+        <a class="open-menu" href="#menu-2">Third Menu</a>
+      </li>
+      <li>
+        <a class="open-menu" href="#menu-3">Fourth Menu</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="other-links">
+    <button class="dark-mode-toggle">
+      <span class="material-symbols-outlined"> dark_mode </span>
+    </button>
+    <ul>
+      <li>
+        <a href="#">Info</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+</header>
 </body>
 </html>
