created and styled dropdown menus

--- a/multiple-dropdown-menus/index.html
+++ b/multiple-dropdown-menus/index.html
@@ -17,16 +17,60 @@
   <nav class="nav">
     <ul>
       <li>
-        <a class="open-menu" href="#menu-2">First Menu</a>
+        <a class="open-menu" href="#menu-1">First Menu</a>
+        <div class="dropdown-menu">
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+          </ul>
+        </div>
       </li>
       <li>
-        <a class="open-menu" href="#menu-1">Second Menu</a>
+        <a class="open-menu" href="#menu-2">Second Menu</a>
+        <div class="dropdown-menu">
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+          </ul>
+        </div>
       </li>
       <li>
-        <a class="open-menu" href="#menu-2">Third Menu</a>
+        <a class="open-menu" href="#menu-3">Third Menu</a>
+        <div class="dropdown-menu">
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+          </ul>
+        </div>
       </li>
       <li>
-        <a class="open-menu" href="#menu-3">Fourth Menu</a>
+        <a class="open-menu" href="#menu-4">Fourth Menu</a>
+        <div class="dropdown-menu">
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+          </ul>
+        </div>
       </li>
     </ul>
   </nav>
