--- a/glass-sidebar/index.html
+++ b/glass-sidebar/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="./script.js" defer></script>
-    <title>Glass Sidebar</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link rel="stylesheet" href="css/style.css" />
+		<script src="./script.js" defer></script>
+		<title>Glass Sidebar</title>
+	</head>
+	<body>
+		<div class="sidebar">
+			<div class="logo">
+				<h3>Dashboard</h3>
+			</div>
+
+			<nav>
+				<div class="nav-title">Management</div>
+
+				<ul>
+					<li class="nav-item active">
+						<span class="material-symbols-outlined"> dashboard </span>
+						<span class="text">Dashboard</span>
+					</li>
+					<li class="nav-item">
+						<span class="material-symbols-outlined"> monitoring </span>
+						<span class="text">Analytics</span>
+					</li>
+					<li class="nav-item">
+						<span class="material-symbols-outlined"> account_balance_wallet </span>
+						<span class="text">Wallet</span>
+					</li>
+					<li class="nav-item">
+						<span class="material-symbols-outlined"> notifications </span>
+						<span class="text">Notifications</span>
+					</li>
+					<li class="nav-item">
+						<span class="material-symbols-outlined"> settings </span>
+						<span class="text">Settings</span>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</body>
 </html>
