--- a/glass-sidebar/index.html
+++ b/glass-sidebar/index.html
@@ -11,6 +11,10 @@
 	</head>
 	<body>
 		<div class="sidebar">
+			<div class="toggle">
+				<span class="material-symbols-outlined"> chevron_right </span>
+			</div>
+
 			<div class="logo">
 				<h3>Dashboard</h3>
 			</div>
@@ -38,6 +42,21 @@
 					<li class="nav-item">
 						<span class="material-symbols-outlined"> settings </span>
 						<span class="text">Settings</span>
+					</li>
+				</ul>
+
+				<hr />
+
+				<div class="nav-title">Supports</div>
+
+				<ul>
+					<li class="nav-item">
+						<span class="material-symbols-outlined"> help </span>
+						<span class="text">Get Help</span>
+					</li>
+					<li class="nav-item">
+						<span class="material-symbols-outlined"> chat </span>
+						<span class="text">Send Feedback</span>
 					</li>
 				</ul>
 			</nav>
