opening & closing sidebar

--- a/glass-sidebar/index.html
+++ b/glass-sidebar/index.html
@@ -10,7 +10,7 @@
 		<title>Glass Sidebar</title>
 	</head>
 	<body>
-		<div class="sidebar open">
+		<div class="sidebar">
 			<div class="toggle">
 				<span class="material-symbols-outlined"> chevron_right </span>
 			</div>
